fix(styles): blockquote spacing

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -15,7 +15,7 @@
 	}
 
 	& > blockquote {
-		margin-inline: calc(#{$x2-gap-body} - var(--blockquotePadding));
+		margin-inline-start: calc(#{$x2-gap-body} - var(--blockquotePadding));
 	}
 
 	& > figure figcaption {
@@ -35,6 +35,10 @@
 }
 
 article.content {
+	& > blockquote {
+		margin-inline: calc(#{$x2-gap-body} - var(--blockquotePadding));
+	}
+
 	:where(h1, h2, h3, h4, h5, h6) {
 		--x2-size-icon: 1ch;
 		a .icon {
